ScrollingCoordinator: Don't project touch handler rectangles into throttled layers

When projecting touch handler region rectangles into the layer tree,
ignore throttled subtrees since their compositing information may be
stale.

BUG=609757

Review-Url: https://codereview.chromium.org/1956873002
Cr-Commit-Position: refs/heads/master@{#392577}

Former-commit-id: a14b445bcd0d0cfaf86e57966a611a1c2d592c0e